// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition hook should return with Navigation props 1`] = `
Object {
  "className": "css-1fie8gx css-63it0p css-1qnz8fc bb-Box bb-Navigation",
  "role": "navigation",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  list-style: unset;
  list-style-type: none;
}

.emotion-3 .emotion-3 {
  margin-left: 1rem;
}

.emotion-3 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-6 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-9 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-9 .bb-Icon {
  vertical-align: -0.125em;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Navigation"
>
  <ul
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-List"
  >
    <li
      class="emotion-6 emotion-1 emotion-2 bb-Box bb-ListItem"
    >
      <a
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-Link"
        href="https://google.com"
      >
        Google
      </a>
    </li>
    <li
      class="emotion-6 emotion-1 emotion-2 bb-Box bb-ListItem"
    >
      <a
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-Link"
        href="https://github.com"
      >
        GitHub
      </a>
    </li>
  </ul>
</div>
`;

exports[`composition use should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  list-style: unset;
  list-style-type: none;
}

.emotion-3 .emotion-3 {
  margin-left: 1rem;
}

.emotion-3 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-6 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-9 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-9 .bb-Icon {
  vertical-align: -0.125em;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Navigation"
  role="navigation"
>
  <ul
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-List"
  >
    <li
      class="emotion-6 emotion-1 emotion-2 bb-Box bb-ListItem"
    >
      <a
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-Link"
        href="https://google.com"
      >
        Google
      </a>
    </li>
    <li
      class="emotion-6 emotion-1 emotion-2 bb-Box bb-ListItem"
    >
      <a
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-Link"
        href="https://github.com"
      >
        GitHub
      </a>
    </li>
  </ul>
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  list-style: unset;
  list-style-type: none;
}

.emotion-3 .emotion-3 {
  margin-left: 1rem;
}

.emotion-3 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-6 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-9 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-9 .bb-Icon {
  vertical-align: -0.125em;
}

<nav
  class="emotion-0 emotion-1 emotion-2 test bb-Box bb-Navigation"
>
  <ul
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-List"
  >
    <li
      class="emotion-6 emotion-1 emotion-2 bb-Box bb-ListItem"
    >
      <a
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-Link"
        href="https://google.com"
      >
        Google
      </a>
    </li>
    <li
      class="emotion-6 emotion-1 emotion-2 bb-Box bb-ListItem"
    >
      <a
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-Link"
        href="https://github.com"
      >
        GitHub
      </a>
    </li>
  </ul>
</nav>
`;

exports[`overrides Navigation.base should render correctly 1`] = `
.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  list-style: unset;
  list-style-type: none;
}

.emotion-3 .emotion-3 {
  margin-left: 1rem;
}

.emotion-3 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-6 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-9 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-9 .bb-Icon {
  vertical-align: -0.125em;
}

<nav
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Navigation"
>
  <ul
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-List"
  >
    <li
      class="emotion-6 emotion-1 emotion-2 bb-Box bb-ListItem"
    >
      <a
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-Link"
        href="https://google.com"
      >
        Google
      </a>
    </li>
    <li
      class="emotion-6 emotion-1 emotion-2 bb-Box bb-ListItem"
    >
      <a
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-Link"
        href="https://github.com"
      >
        GitHub
      </a>
    </li>
  </ul>
</nav>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  list-style: unset;
  list-style-type: none;
}

.emotion-3 .emotion-3 {
  margin-left: 1rem;
}

.emotion-3 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-6 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-9 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-9 .bb-Icon {
  vertical-align: -0.125em;
}

<nav
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Navigation"
>
  <ul
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-List"
  >
    <li
      class="emotion-6 emotion-1 emotion-2 bb-Box bb-ListItem"
    >
      <a
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-Link"
        href="https://google.com"
      >
        Google
      </a>
    </li>
    <li
      class="emotion-6 emotion-1 emotion-2 bb-Box bb-ListItem"
    >
      <a
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-Link"
        href="https://github.com"
      >
        GitHub
      </a>
    </li>
  </ul>
</nav>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  background-color: var(--bb-palette-primary, #000000)!important;
}

.emotion-3 {
  list-style: unset;
  list-style-type: none;
}

.emotion-3 .emotion-3 {
  margin-left: 1rem;
}

.emotion-3 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-6 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-9 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-9 .bb-Icon {
  vertical-align: -0.125em;
}

<nav
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Navigation"
>
  <ul
    class="emotion-3 emotion-1 emotion-5 bb-Box bb-List"
  >
    <li
      class="emotion-6 emotion-1 emotion-5 bb-Box bb-ListItem"
    >
      <a
        class="emotion-9 emotion-1 emotion-5 bb-Box bb-Link"
        href="https://google.com"
      >
        Google
      </a>
    </li>
    <li
      class="emotion-6 emotion-1 emotion-5 bb-Box bb-ListItem"
    >
      <a
        class="emotion-9 emotion-1 emotion-5 bb-Box bb-Link"
        href="https://github.com"
      >
        GitHub
      </a>
    </li>
  </ul>
</nav>
`;

exports[`theming Navigation.base should render correctly 1`] = `
.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  list-style: unset;
  list-style-type: none;
}

.emotion-3 .emotion-3 {
  margin-left: 1rem;
}

.emotion-3 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-6 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-9 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-9 .bb-Icon {
  vertical-align: -0.125em;
}

<nav
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Navigation"
>
  <ul
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-List"
  >
    <li
      class="emotion-6 emotion-1 emotion-2 bb-Box bb-ListItem"
    >
      <a
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-Link"
        href="https://google.com"
      >
        Google
      </a>
    </li>
    <li
      class="emotion-6 emotion-1 emotion-2 bb-Box bb-ListItem"
    >
      <a
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-Link"
        href="https://github.com"
      >
        GitHub
      </a>
    </li>
  </ul>
</nav>
`;
